--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en" class="bg-gradient-to-br from-blue-50 to-blue-100 min-h-screen flex flex-col items-center justify-center">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign In App</title>
-  <link rel="manifest" href="manifest.json" />
-
-  <!-- Tailwind CSS CDN -->
+  <title>Sign In PWA</title>
   <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
-<body class="h-full bg-gray-100 text-gray-800 flex flex-col items-center justify-start p-4">
-  <h1 class="text-3xl font-bold mb-6">Sign In App</h1>
+<body class="text-gray-800 p-6 w-full max-w-md">
 
-  <div class="space-x-4 mb-8">
-    <button onclick="showSignInForm()" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Sign In</button>
-    <button onclick="showSignOutList()" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">Sign Out</button>
-  </div>
+  <div class="bg-white shadow-2xl rounded-xl p-8 space-y-6 w-full">
+    <h1 class="text-3xl font-bold text-center text-blue-600">📋 Sign In App</h1>
 
-  <!-- Sign In Form -->
-  <div id="formContainer" class="bg-white shadow p-6 rounded w-full max-w-sm mb-6 hidden">
-    <h2 class="text-xl font-semibold mb-4">Sign In</h2>
-    <input id="nameInput" placeholder="Enter your name" class="w-full border p-2 mb-4 rounded" />
-    <div class="flex justify-between">
-      <button onclick="signIn()" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">Submit</button>
-      <button onclick="hideForm()" class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+    <!-- Sign In Form -->
+    <form id="signInForm" class="space-y-4">
+      <input id="signInName" type="text" placeholder="Enter your name"
+        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400"/>
+      <button type="submit"
+        class="w-full bg-blue-500 text-white font-semibold py-3 rounded-lg shadow hover:bg-blue-600 transform hover:scale-105 transition-all duration-300">
+        ✅ Sign In
+      </button>
+    </form>
+
+    <!-- Sign Out -->
+    <div class="space-y-2">
+      <select id="signOutSelect"
+        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-400">
+        <option value="">Select name to sign out</option>
+      </select>
+      <button id="signOutButton"
+        class="w-full bg-red-500 text-white font-semibold py-3 rounded-lg shadow hover:bg-red-600 transform hover:scale-105 transition-all duration-300">
+        🚪 Sign Out
+      </button>
+    </div>
+
+    <!-- Currently Signed In -->
+    <div>
+      <h2 class="text-xl font-semibold mb-2">Currently Signed In:</h2>
+      <ul id="signedInList" class="space-y-1 list-disc list-inside"></ul>
     </div>
   </div>
 
-  <!-- Sign Out List -->
-  <div id="signOutContainer" class="bg-white shadow p-6 rounded w-full max-w-sm mb-6 hidden">
-    <h2 class="text-xl font-semibold mb-4">Sign Out</h2>
-    <ul id="signOutList" class="space-y-2"></ul>
-    <button onclick="hideSignOut()" class="mt-4 px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 w-full">Close</button>
-  </div>
-
-  <h2 class="text-xl font-semibold mb-4">Currently Signed In</h2>
-  <ul id="signedInList" class="w-full max-w-md bg-white shadow p-4 rounded space-y-2"></ul>
-
-  <script src="app.js"></script>
 </body>
+<script src="app.js"></script>
 </html>
