--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gradient-to-br from-blue-50 to-blue-100 min-h-screen flex flex-col items-center justify-center">
+<html lang="en" class="bg-gradient-to-br from-blue-50 to-blue-100 min-h-screen flex flex-col items-center justify-center transition-colors duration-500">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign In PWA</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="text-gray-800 p-6 w-full max-w-md">
+<body class="text-gray-800 p-6 w-full max-w-md opacity-0 transition-opacity duration-700">
 
-  <div class="bg-white shadow-2xl rounded-xl p-8 space-y-6 w-full">
-    <h1 class="text-3xl font-bold text-center text-blue-600">📋 Sign In App</h1>
+  <!-- Dark mode toggle -->
+  <button id="toggleDarkMode" 
+    class="absolute top-6 right-6 bg-gray-800 text-white px-4 py-2 rounded-full shadow hover:bg-gray-900 transform hover:scale-105 transition-all duration-300">
+    🌙 Toggle Dark Mode
+  </button>
+
+  <div class="bg-white dark:bg-gray-800 shadow-2xl rounded-xl p-8 space-y-6 w-full">
+    <h1 class="text-3xl font-bold text-center text-blue-600 dark:text-blue-400">📋 Sign In App</h1>
 
     <!-- Sign In Form -->
     <form id="signInForm" class="space-y-4">
       <input id="signInName" type="text" placeholder="Enter your name"
-        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400"/>
+        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400 dark:bg-gray-700 dark:border-gray-600 dark:text-white"/>
       <button type="submit"
         class="w-full bg-blue-500 text-white font-semibold py-3 rounded-lg shadow hover:bg-blue-600 transform hover:scale-105 transition-all duration-300">
         ✅ Sign In
@@ -24,7 +30,7 @@
     <!-- Sign Out -->
     <div class="space-y-2">
       <select id="signOutSelect"
-        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-400">
+        class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-400 dark:bg-gray-700 dark:border-gray-600 dark:text-white">
         <option value="">Select name to sign out</option>
       </select>
       <button id="signOutButton"
@@ -35,11 +41,27 @@
 
     <!-- Currently Signed In -->
     <div>
-      <h2 class="text-xl font-semibold mb-2">Currently Signed In:</h2>
-      <ul id="signedInList" class="space-y-1 list-disc list-inside"></ul>
+      <h2 class="text-xl font-semibold mb-2 dark:text-white">Currently Signed In:</h2>
+      <ul id="signedInList" class="space-y-2"></ul>
     </div>
   </div>
 
+  <!-- Toast notification -->
+  <div id="toast" class="fixed bottom-6 left-1/2 transform -translate-x-1/2 bg-gray-800 text-white px-6 py-3 rounded-full shadow-lg opacity-0 pointer-events-none transition-opacity duration-500"></div>
+
+  <script src="app.js"></script>
+  <script>
+    // Fade in page on load
+    window.addEventListener('load', () => {
+      document.body.classList.remove('opacity-0');
+    });
+
+    // Dark mode toggle
+    const toggle = document.getElementById('toggleDarkMode');
+    toggle.addEventListener('click', () => {
+      document.documentElement.classList.toggle('dark');
+    });
+  </script>
+
 </body>
-<script src="app.js"></script>
 </html>
