--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <title>Sign In App</title>
   <style>
+    /* Base styles */
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 20px;
       background: #f9f9f9;
       color: #333;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
     h1, h2 {
       color: #4CAF50;
+      margin-bottom: 1rem;
     }
     .btn {
       background: #4CAF50;
@@ -25,6 +29,9 @@
       border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease, transform 0.2s ease;
+      min-width: 140px;
+      user-select: none;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
     .btn:hover,
     .btn.btn-hover {
@@ -32,13 +39,15 @@
       transform: scale(1.05);
     }
     input[type="text"] {
-      padding: 10px;
+      padding: 12px;
       font-size: 1.1rem;
       width: 80%;
-      margin: 10px 0;
+      max-width: 400px;
+      margin: 15px 0 25px 0;
       border-radius: 6px;
       border: 2px solid #ccc;
       transition: border-color 0.3s ease;
+      box-sizing: border-box;
     }
     input[type="text"]:focus {
       border-color: #4CAF50;
@@ -52,14 +61,72 @@
     }
     li.signout-user {
       background: #f0f0f0;
-      padding: 10px;
-      margin: 5px 0;
+      padding: 12px;
+      margin: 6px 0;
       border-radius: 6px;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      user-select: none;
+      font-size: 1.1rem;
     }
     li.signout-user:hover {
       background: #d1e7dd;
+    }
+
+    /* Responsive typography */
+    h1 {
+      font-size: 2.4rem;
+    }
+    h2 {
+      font-size: 1.8rem;
+    }
+
+    /* Media Queries for smaller screens */
+    @media (max-width: 600px) {
+      body {
+        margin: 10px;
+      }
+      h1 {
+        font-size: 1.8rem;
+      }
+      h2 {
+        font-size: 1.4rem;
+      }
+      .btn {
+        padding: 12px 20px;
+        font-size: 1rem;
+        min-width: 110px;
+        margin: 8px 6px;
+      }
+      input[type="text"] {
+        width: 95%;
+        font-size: 1rem;
+        margin: 12px 0 20px 0;
+      }
+      li.signout-user {
+        font-size: 1rem;
+        padding: 10px;
+        margin: 5px 0;
+      }
+    }
+
+    /* Media Queries for very small devices (e.g., older iPhones) */
+    @media (max-width: 360px) {
+      .btn {
+        padding: 10px 16px;
+        font-size: 0.9rem;
+        min-width: 90px;
+        margin: 6px 4px;
+      }
+      input[type="text"] {
+        font-size: 0.95rem;
+        margin: 10px 0 15px 0;
+      }
+      li.signout-user {
+        font-size: 0.9rem;
+        padding: 8px;
+        margin: 4px 0;
+      }
     }
   </style>
 </head>
@@ -70,18 +137,13 @@
     // Replace with your Google Apps Script Web App URL
     const GOOGLE_SCRIPT_URL = "YOUR_WEB_APP_URL_HERE";
 
-    // Local storage key for current signed-in users
     const STORAGE_KEY = "signedInUsers";
-
-    // Cached signed-in users in memory (loaded from localStorage)
     let signedInUsers = JSON.parse(localStorage.getItem(STORAGE_KEY)) || [];
 
-    // Helper: Save signedInUsers to localStorage
     function saveSignedInUsers() {
       localStorage.setItem(STORAGE_KEY, JSON.stringify(signedInUsers));
     }
 
-    // Helper: Send sign-in/out event to Google Sheets backend
     function sendToGoogleSheets(name, action) {
       fetch(GOOGLE_SCRIPT_URL, {
         method: "POST",
@@ -105,10 +167,8 @@
         });
     }
 
-    // UI elements
     const mainDiv = document.getElementById("main");
 
-    // Create buttons with animation class
     function createButton(text) {
       const btn = document.createElement("button");
       btn.textContent = text;
@@ -118,7 +178,6 @@
       return btn;
     }
 
-    // Render main menu: Sign In | Sign Out | View Signed In
     function renderMainMenu() {
       mainDiv.innerHTML = "";
       const title = document.createElement("h1");
@@ -137,7 +196,6 @@
       mainDiv.appendChild(viewBtn);
     }
 
-    // Render sign-in form
     function renderSignInForm() {
       mainDiv.innerHTML = "";
       const label = document.createElement("label");
@@ -180,7 +238,6 @@
       input.focus();
     }
 
-    // Render list of signed-in users to sign out
     function renderSignOutList() {
       mainDiv.innerHTML = "";
       const title = document.createElement("h2");
@@ -219,7 +276,6 @@
       mainDiv.appendChild(backBtn);
     }
 
-    // Render currently signed-in users list
     function renderCurrentlySignedIn() {
       mainDiv.innerHTML = "";
       const title = document.createElement("h2");
@@ -247,7 +303,6 @@
       mainDiv.appendChild(backBtn);
     }
 
-    // Initialize app on page load
     renderMainMenu();
   </script>
 </body>
